--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root{
+    --border: #e5e7eb;
+    --border-radius: #6c34ef;
+    --meu-gradiente: linear-gradient(to right, #6548E4, #4FC2AE);
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -24,11 +30,41 @@ body{
 }
 
 .btn-random{
+    background: var(--meu-gradiente);
+    color: #fff;
     max-width: 48rem;
+    transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
 }
 
+.btn-random:hover{
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+    transform: translateY(-1px) scale(1.1);
+}
+
+
+
 .btn-category{
-    min-width: 140px;
+    background-color: #fff;
+    border: 1.7px solid var(--border);
+    border-radius: 10px;
+    width: 18rem;
+    transition: border 0.08s ease;
+}
+
+.btn-category:hover{
+    border: 2.5px solid var(--border-radius);
+}
+
+@media (min-width: 1025px){
+    .btn-category{
+        min-width: 140px;
+    }
+}
+
+.text-highlight{
+    background: var(--meu-gradiente);
+    background-clip: text;
+    color: transparent;
 }
 
 /* 
@@ -44,7 +80,7 @@ body{
     align-items: center;
     height: 15vh;
     padding: 0rem 1rem;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid var(--border);
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
 }
@@ -60,15 +96,35 @@ body{
     display: none;
 }
 
-.fa-bars, .fa-shop{
+@media (min-width: 1025px){
+    .main-header__navbar{
+        display: flex;
+    }
+}
+
+
+.fa-bars, .fa-shop, .fa-xmark{
     font-size: 26px;
     cursor: pointer;
 }
+
+@media (min-width: 1025px){
+    #headerMenu{
+        display: none;
+    }
+}
+
+
 .main-header__navbox{
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
-    
+}
+
+@media (min-width: 1025px){
+    .main-header__navbox{
+        flex-direction: row;
+    }
 }
 
 .main-header__navbox a{
@@ -87,6 +143,7 @@ body{
 
 .active{
     background-color: #fff;
+    border-bottom: 1px solid var(--border);
     display: block;
     position: fixed;
     padding: 1rem;
@@ -107,6 +164,12 @@ body{
     text-align: center;
 }
 
+@media (min-width: 1025px){
+    .main-content{
+        padding: 6rem 1rem;
+    }
+}
+
 .hero{
     display: flex;
     flex-direction: column;
@@ -116,19 +179,56 @@ body{
 }
 
 .hero__title{
+    line-height: 1;
+    font-weight: 900;
     font-size: 3rem;
+}
+
+@media (min-width: 1025px){
+    .hero__title{
+        font-size: 6rem;
+    }
 }
 
 .hero__description{
     font-size: 1.125rem;
 }
 
+@media (min-width: 1025px){
+    .hero__description{
+        font-size: 1.5rem;
+    }
+}
+
+
 /* 
-    2. F o o t e r
+    22. C a t e g o r i a s
+*/
+
+.hero__btn-box{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+@media (min-width: 1025px){
+    .hero__btn-box{
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+    }
+}
+
+.box--little{
+    margin-right: 8px;
+}
+
+/* 
+    3. F o o t e r
 */
 .main-footer{
     height: 15vh;
-    border-top: 1px solid gray;
+    border-top: 1px solid var(--border);
     display: flex;
     justify-content: center;
     align-items: center;
