--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     --background-gradiente: linear-gradient(to right, #6548E4, #8a75e7);
 }
 
+/* Reset do CSS */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -160,11 +162,12 @@ body {
     font-weight: 700;
     gap: 0.75rem;
 }
-
+/* Faz o menu desaparecer no celular */
 .main-header__navbar {
     display: none;
 }
 
+/* Faz o menu aparecer no header no computador */
 @media (min-width: 1025px) {
     .main-header__navbar {
         display: flex;
@@ -178,6 +181,7 @@ body {
     cursor: pointer;
 }
 
+/* Faz o menu hamburguer desaparecer no desktop */
 @media (min-width: 1025px) {
     #headerMenu {
         display: none;
@@ -257,7 +261,7 @@ body {
 }
 
 /* 
-    2. M a i n
+    2. M a i n - A m b o s
 */
 
 .main-content {
@@ -287,10 +291,6 @@ body {
     font-size: 3rem;
 }
 
-#gallery-random{
-    display: flex;
-    justify-content: center;
-}
 
 @media (min-width: 1025px) {
     .hero__title {
@@ -308,9 +308,17 @@ body {
     }
 }
 
+/* 
+    2. H o m e
+*/
+
+#gallery-random{
+    display: flex;
+    justify-content: center;
+}
 
 /* 
-    22. C a t e g o r i a s
+    3. C a t e g o r i a s
 */
 
 .hero__btn-box {
@@ -331,11 +339,14 @@ body {
     margin-right: 8px;
 }
 
+/* Inicia os cards em apenas 1 coluna */
 #gallery__placeholder {
     display: grid;
+    justify-content: center;
     gap: 2rem;
 }
 
+/* Faz com que haja 3 colunas no desktop */
 @media (min-width: 1025px) {
     #gallery__placeholder {
         display: grid;
@@ -345,7 +356,7 @@ body {
 }
 
 /* 
-    3. F o o t e r
+    4. F o o t e r
 */
 .main-footer {
     height: 15vh;
